adds nav-bar component

--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -1,3 +1,23 @@
 nav {
   background-color: #000000;
 }
+
+.text-color {
+  color: white;
+  margin-left: 30px;
+}
+
+.links{
+  margin-top: 10px;
+}
+
+.links:hover {
+  cursor: pointer;
+  color: grey;
+  text-decoration: underline;
+}
+
+.search {
+  margin-top: 15px;
+  margin-left: 15px;
+}
