--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -1,3 +1,26 @@
-<nav>
-  
+<nav class="navbar navbar-expand-lg">
+  <div class="navbar-brand text-color">
+    <h1>
+      Shopkeeper.gg
+    </h1>
+  </div>
+  <div>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link text-color links ml-2"><h5>Home</h5></a>
+      </li>
+      <li class="nav-item ml-3">
+        <a class="nav-link text-color links"><h5>Wishlist</h5></a>
+      </li>
+      <li class="nav-item ml-3">
+        <a class="nav-link text-color links"><h5>Login</h5></a>
+      </li>
+      <li class="nav-item ml-3">
+        <a class="nav-link text-color links"><h5>Logout</h5></a>
+      </li>
+      <li class="nav-item ml-3">
+        <a class="nav-link text-color links"><h5>Sign Up</h5></a>
+      </li>
+    </ul>
+  </div>
 </nav>
