adds game index styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-navbar class="sticky"></app-navbar>
-<app-game-index></app-game-index>
+<div>
+  <app-navbar></app-navbar>
+</div>
+<div class="index">
+  <app-game-index></app-game-index>
+</div>
+
