--- a/src/app/components/game-index/game-index/game-index.component.html
+++ b/src/app/components/game-index/game-index/game-index.component.html
@@ -1,5 +1,30 @@
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-lg-3" *ngFor="let game of games">
+      <h5>{{ game.name }}</h5>
+      <img src="{{ game.cover.url.replace('t_thumb', 't_1080p') }}" height="325px" width="250">
+    </div>
+  </div>
+</div> -->
+
 <div class="container">
-  <div class="" *ngFor="let game of games">
-    <h5>{{ game.name }}</h5>
+  <div class="row">
+    <div class="col-lg-3" *ngFor="let game of games">
+      <div class="card" style="width: 18rem;">
+        <img src="{{ game.cover.url.replace('t_thumb', 't_1080p') }}" height="350px" width="250" class="card-img-top">
+        <div class="card-body">
+          <p class="card-text no-wrap">
+            <b>{{ game.name }}</b>
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+<!-- <div class="card" style="width: 18rem;">
+  <img src="{{ game.cover.url.replace('t_thumb', 't_1080p') }}" height="325px" width="250" class="card-img-top">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div> -->
