adds search component and some image styling on index component

--- a/src/app/components/game-index/game-index/game-index.component.scss
+++ b/src/app/components/game-index/game-index/game-index.component.scss
@@ -1,9 +1,19 @@
 img:hover {
   cursor: pointer;
+  transform: scale(1.03);
+  // overflow: hidden;
 }
 
 .no-wrap {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.search {
+  padding-bottom: 10px;
+}
+
+.overflow {
+  overflow: hidden;
 }
