--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -21,6 +21,9 @@
       <li class="nav-item ml-3">
         <a class="nav-link text-color links"><h5>Sign Up</h5></a>
       </li>
+      <li class="nav-item ml-3">
+        <app-game-search class="search"></app-game-search>
+      </li>
     </ul>
   </div>
 </nav>
