--- a/src/app/components/game-index/game-index/game-index.component.html
+++ b/src/app/components/game-index/game-index/game-index.component.html
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3" *ngFor="let game of games">
-      <div class="card" style="width: 18rem;">
+      <div class="card overflow" style="width: 18rem;">
         <img src="{{ game.cover.url.replace('t_thumb', 't_1080p') }}" height="350px" width="250" class="card-img-top">
         <div class="card-body">
           <p class="card-text no-wrap">
